[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fblapix-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pause & Death/Pause.gd" type="Script" id=2]
[ext_resource path="res://Music/zapsplat_office_calculator_button_press_single_002_11984.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Controls.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=20]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=21]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 20 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=22]

[node name="Pause" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -320.0
margin_top = -157.0
margin_right = 969.0
margin_bottom = 587.0
color = Color( 0, 0, 0, 0.498039 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
margin_left = 554.0
margin_top = 157.0
margin_right = 775.0
margin_bottom = 479.0
grow_horizontal = 2
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Resume" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 103.0
margin_right = 221.0
margin_bottom = 139.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/focus = SubResource( 19 )
text = "Resume"
flat = true

[node name="Controls" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 143.0
margin_right = 221.0
margin_bottom = 179.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/focus = SubResource( 19 )
text = "Controls"
flat = true

[node name="Main Menu" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 183.0
margin_right = 221.0
margin_bottom = 219.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/focus = SubResource( 19 )
text = "Main Menu"
flat = true

[node name="Quit" type="Button" parent="ColorRect"]
margin_left = 608.0
margin_top = 472.0
margin_right = 720.0
margin_bottom = 508.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 22 )
text = "QUIT"
flat = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0

[node name="Control" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="ColorRect/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="ColorRect/Quit" to="." method="_on_Quit_pressed"]
